Fixed UI issue with scrollbars being visible when the text overflows

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,7 +116,7 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Overrides */
 .panel-heading {
-    overflow: auto;
+    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
